[gd_scene load_steps=11 format=3 uid="uid://dbp1ev7y2vctp"]

[ext_resource type="Texture2D" uid="uid://rqrldmkua8q1" path="res://assets/ui/buttons/level_plate.png" id="1_2e3x2"]
[ext_resource type="Script" path="res://menu/pop_ups/level_select.gd" id="1_eplr4"]
[ext_resource type="Texture2D" uid="uid://ia3enmr0hr3e" path="res://assets/ui/buttons/level_button.png" id="3_vnrul"]
[ext_resource type="Texture2D" uid="uid://q61d4cftlavb" path="res://assets/ui/buttons/difficulty_lvl1.png" id="4_j7iro"]
[ext_resource type="Texture2D" uid="uid://c4yfacvf6wd0p" path="res://assets/ui/buttons/difficulty_lvl2.png" id="5_djk0q"]
[ext_resource type="Texture2D" uid="uid://24gc0o0s0gso" path="res://assets/ui/buttons/difficulty_lvl3.png" id="6_8no8y"]
[ext_resource type="Texture2D" uid="uid://b355sua0ovi8o" path="res://assets/ui/buttons/back1.png" id="7_x47hv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_i8spn"]
atlas = ExtResource("4_j7iro")
region = Rect2(35, 23, 58, 51)

[sub_resource type="AtlasTexture" id="AtlasTexture_8olnq"]
atlas = ExtResource("5_djk0q")
region = Rect2(35, 23, 58, 51)

[sub_resource type="AtlasTexture" id="AtlasTexture_axoqj"]
atlas = ExtResource("6_8no8y")
region = Rect2(35, 23, 58, 51)

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eplr4")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_2e3x2")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 179.0
offset_top = 64.0
offset_right = 284.0
offset_bottom = 111.0
texture = ExtResource("3_vnrul")

[node name="DifficultyLvl1" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 88.0
offset_top = 134.0
offset_right = 146.0
offset_bottom = 185.0
texture_normal = SubResource("AtlasTexture_i8spn")

[node name="DifficultyLvl2" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 198.0
offset_top = 150.0
offset_right = 256.0
offset_bottom = 201.0
texture_normal = SubResource("AtlasTexture_8olnq")

[node name="DifficultyLvl3" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 319.0
offset_top = 133.0
offset_right = 377.0
offset_bottom = 184.0
texture_normal = SubResource("AtlasTexture_axoqj")

[node name="BackButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 221.0
offset_right = 489.0
offset_bottom = 541.0
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("7_x47hv")

[connection signal="pressed" from="DifficultyLvl1" to="." method="_on_difficulty_lvl_1_pressed"]
[connection signal="pressed" from="DifficultyLvl2" to="." method="_on_difficulty_lvl_2_pressed"]
[connection signal="pressed" from="DifficultyLvl3" to="." method="_on_difficulty_lvl_3_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
